# gai-sandbox

./: docker-compose.yaml  pyproject.toml
gai_sandbox/qdrant/: __init__.py
gai_sandbox/qdrant/samples/: add_vectors.py  create_collection.py  query.py
gai_sandbox/qdrant/samples/semantic_serach/: __init__.py  __main__.py
gai_sandbox/qdrant/samples/simple_neutral_search_service/: __main__.py  startups_vectors.npy
